BAEL-6085 | Virtual Thread Spring 6